Rewrote scheduled events, fixed unmutes